--- a/src/app/components/administrar-citas/hora/hora.component.html
+++ b/src/app/components/administrar-citas/hora/hora.component.html
@@ -1,1 +1,133 @@
-<p>hora works!</p>
+<div class="container col-2">
+  <div class="card" style="width:14rem;">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Hora</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">8:00</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">8:30</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">9:00</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">9:30</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">10:00</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">10:30</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">11:00</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">11:30</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">12:00</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">12:30</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">2:00</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">2:30</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">3:00</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">3:30</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">4:00</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">4:30</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">5:00</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">5:30</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">6:00</label>
+          </td>
+        </tr>
+        <tr>
+          <td class="form-check form-switch">
+            <input class="form-check-input m-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">6:30</label>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
