--- a/src/app/components/administrar-medicos/medico/medico.component.html
+++ b/src/app/components/administrar-medicos/medico/medico.component.html
@@ -10,79 +10,89 @@
         #key="ngModel"
         [(ngModel)]="medicoService.selectedMedico.key"
       >
-      <div class="form-group col-10">
-        <label>Nombres</label>
+      <div class="form-floating form-group col-10">
         <input
-          type="text"
-          class="form-control m-2"
-          name="name"
-          #name="ngModel"
-          [(ngModel)]="medicoService.selectedMedico.name"
-          maxlength=25
-          required
+        type="text"
+        class="form-control m-2"
+        id="name"
+        name="name"
+        #name="ngModel"
+        [(ngModel)]="medicoService.selectedMedico.name"
+        maxlength=25
+        placeholder="your name"
+        required
         >
+        <label for="name">Nombres</label>
       </div>
-      <div class="form-group col-10">
-        <label>Apellidos</label>
+      <div class="form-floating form-group col-10">
         <input
-          type="text"
-          class="form-control m-2"
-          name="lastname"
-          #lastname="ngModel"
-          [(ngModel)]="medicoService.selectedMedico.lastname"
-          maxlength=25
-          required
+        type="text"
+        class="form-control m-2"
+        id="lastname"
+        name="lastname"
+        #lastname="ngModel"
+        [(ngModel)]="medicoService.selectedMedico.lastname"
+        maxlength=25
+        placeholder="your lastname"
+        required
         >
+        <label for="lastname">Apellidos</label>
       </div>
-      <div class="form-group col-10">
-        <label>DNI</label>
+      <div class="form-floating form-group col-10">
         <input
-          type="number"
-          class="form-control m-2"
-          name="dni"
-          #dni="ngModel"
-          [(ngModel)]="medicoService.selectedMedico.dni"
-          maxlength=8
-          required
+        type="number"
+        class="form-control m-2"
+        id="dni"
+        name="dni"
+        #dni="ngModel"
+        [(ngModel)]="medicoService.selectedMedico.dni"
+        maxlength=8
+        placeholder="your dni"
+        required
         >
+        <label for="dni">DNI</label>
       </div>
-      <div class="form-group col-10">
-        <label>Celular</label>
+      <div class="form-floating form-group col-10">
         <input
-          type="number"
-          class="form-control m-2"
-          name="phone"
-          #phone="ngModel"
-          [(ngModel)]="medicoService.selectedMedico.phone"
-          maxlength=9
-          required
+        type="number"
+        class="form-control m-2"
+        id="phone"
+        name="phone"
+        #phone="ngModel"
+        [(ngModel)]="medicoService.selectedMedico.phone"
+        maxlength=9
+        placeholder="your cellphone"
+        required
         >
+        <label for="phone">Celular</label>
       </div>
-      <div class="form-group col-10">
-        <label>Especialidad</label>
+      <div class="form-floating form-group col-10">
         <select
           class="form-control m-2 form-select"
+          id="specialty"
           name="specialty"
           #specialty="ngModel"
           [(ngModel)]="medicoService.selectedMedico.specialty"
           required
-        >
-          <option value="odontologo">Odontologo</option>
-          <option value="especialista">Especialista</option>
+          >
+          <option value="Odontologo">Odontologo</option>
+          <option value="Especialista">Especialista</option>
         </select>
+        <label for="specialty">Especialidad</label>
       </div>
-      <div class="form-group col-5">
-        <label>Estado</label>
+      <div class="form-floating form-group col-5">
         <select
           class="form-control m-2 form-select"
+          id="state"
           name="state"
           #state="ngModel"
           [(ngModel)]="medicoService.selectedMedico.state"
           required
-        >
+          >
           <option value=true>Activo</option>
           <option value=false>Inactivo</option>
         </select>
+        <label for="state">Estado</label>
       </div>
       <div class="form-group">
         <button class="btn btn-primary m-2" type="submit">
