--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<div class="container" *ngIf="userLogged|async as user">
-  <nav class="navbar navbar-expand-lg navbar-light">
+<div class="container-fluid navbar-light" *ngIf="userLogged|async as user">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="">Clinica Dental Odonto Services</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
