--- a/src/app/components/administrar-medicos/listar-medicos/listar-medicos.component.html
+++ b/src/app/components/administrar-medicos/listar-medicos/listar-medicos.component.html
@@ -4,17 +4,23 @@
       <b>Lista de Medicos</b>
     </div>
     <table class="table table-sm table-hover">
-      <tbody *ngFor="let medico of medicoList">
-        <td>{{ medico.name }}</td>
-        <td>{{ medico.dni }}</td>
-        <td>
-          <a class="btn btn-secondary text-black" (click)="onEdit(medico)">
-            <i class="fa fa-pencil-square-o"></i>
-          </a>
-          <a class="btn btn-danger text-black" (click)="onDelete(medico.key)">
-            <i class="fa fa-trash"></i>
-          </a>
-        </td>
+      <tbody>
+        <tr>
+          <td><b>Nombres y Apellidos</b></td>
+          <td><b>Dni</b></td>
+        </tr>
+        <tr *ngFor="let medico of medicoList">
+          <td>{{ medico.name + " " + medico.lastname }}</td>
+          <td>{{ medico.dni }}</td>
+          <td>
+            <a class="btn btn-secondary text-black" (click)="onEdit(medico)">
+              <i class="fa fa-pencil-square-o"></i>
+            </a>
+            <a class="btn btn-danger text-black" (click)="onDelete(medico.key)">
+              <i class="fa fa-trash"></i>
+            </a>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
