--- a/src/app/components/administrar-servicios/administrar-servicios.component.html
+++ b/src/app/components/administrar-servicios/administrar-servicios.component.html
@@ -1,3 +1,14 @@
-<div class="container">
-  <p>administrar-servicios works!</p>
+<div class="container" *ngIf="userLogged|async as user">
+  <div *ngFor="let users of userList">
+    <div *ngIf="user.email==users.email && users.rank=='admin'">
+      <div class="row">
+        <div class="col-md-3">
+            <app-servicio></app-servicio>
+        </div>
+        <div class="col-md-5 text-center">
+          <app-listar-servicios></app-listar-servicios>
+        </div>
+    </div>
+    </div>
+  </div>
 </div>
